tests/expectations/compiler/core/algorithms/keccak512_hash_to_group.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:24
     |
  28 |         let a: group = Keccak512::hash_to_group(addr_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:24
     |
  29 |         let b: group = Keccak512::hash_to_group(bool_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:24
     |
  30 |         let c: group = Keccak512::hash_to_group(field_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:24
     |
  31 |         let d: group = Keccak512::hash_to_group(group_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:24
     |
  32 |         let e: group = Keccak512::hash_to_group(i8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:24
     |
  33 |         let f: group = Keccak512::hash_to_group(i16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:24
     |
  34 |         let g: group = Keccak512::hash_to_group(i32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:24
     |
  35 |         let h: group = Keccak512::hash_to_group(i64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:24
     |
  36 |         let i: group = Keccak512::hash_to_group(i128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:24
     |
  37 |         let j: group = Keccak512::hash_to_group(u8_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:24
     |
  38 |         let k: group = Keccak512::hash_to_group(u16_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:24
     |
  39 |         let l: group = Keccak512::hash_to_group(u32_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:24
     |
  40 |         let m: group = Keccak512::hash_to_group(u64_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:24
     |
  41 |         let n: group = Keccak512::hash_to_group(u128_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:24
     |
  42 |         let o: group = Keccak512::hash_to_group(scalar_value);
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:24
     |
  44 |         let q: group = Keccak512::hash_to_group(Foo { a: 1u128, b: 1u128 });
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
